Вывод информации о сервере на страницу

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Plugin Data</title>
+    <title>HeartBeat Monitor on {{ serverInfo }}</title>
     <link rel="stylesheet" href="/templates/styles.css">
 </head>
 <body>
-    <h1>Plugin Data</h1>
+    <h1>{{ serverInfo }}</h1>
     {{ renderList . }}
 </body>
 </html>
