--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,20 +1,21 @@
 body {
     font-family: Arial, sans-serif;
     color: #333;
-    background-color: #fff;
+    background-color: #e5e9f0;
     line-height: 1.6;
     padding: 10px;
 }
 
 ul ul, ol ul, ul ol, ol ol {
-    background-color: #f9f9f9;
-    border-left: 3px solid #ddd;
-    padding-left: 15px;
+    background-color: #d8dee9;
+    border: 1px solid #bbb;
+    margin-left: 1em;
+    border-radius: 5px;
 }
 
 ul ul ul, ol ul ul, ul ol ul, ol ol ul {
-    background-color: #f0f0f0;
-    border-left: 3px solid #bbb;
+    background-color: #d8dee9;
+    border-left: 3px solid #81a1c1;
 }
 
 ul {
@@ -26,6 +27,8 @@ li {
     margin: 5px 0;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    border-radius: 1em;
+    text-indent: 3em;
 }
 
 li > strong {
@@ -35,7 +38,7 @@ li > strong {
 }
 
 li:hover {
-    background-color: #e9ecef;
+    background-color: #81a1c1;
 }
 
 .plugin-name {
