--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,7 +1,34 @@
+:root {
+    --nord0: #2e3440;
+    --nord1: #3b4252;
+    --nord2: #434c5e;
+    --nord3: #4c566a;
+    --nord4: #d8dee9;
+    --nord5: #e5e9f0;
+    --nord6: #eceff4;
+    --nord7: #8fbcbb;
+    --nord8: #88c0d0;
+    --nord9: #81a1c1;
+    --nord10: #5e81ac;
+    --nord11: #bf616a;
+    --nord12: #d08770;
+    --nord13: #ebcb8b;
+    --nord14: #a3be8c;
+    --nord15: #b48ead;
+
+    --background-color: var(--nord3);
+    --first-level-background-color: var(--nord3);
+    --second-level-background-color: var(--nord2);
+    --third-level-background-color: var(--nord1);
+    --primary-color: var(--nord4);
+    --title-color: var(--nord8);
+    --node-title-color: var(--nord14);
+}
+
 body {
     font-family: Arial, sans-serif;
-    color: #333;
-    background-color: #e5e9f0;
+    color: var(--primary-color);
+    background-color: var(--background-color);
     line-height: 1.6;
     padding: 10px;
 }
@@ -47,24 +74,40 @@ li:hover {
 }
 
 .widget {
-    /* background-color: gray; */
+    background-color: var(--first-level-background-color);
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    padding-left: 2em;
+    padding: 1em;
+    align-items: baseline;
+    border-radius: 1em;
 }
 
 .widget>.widget {
-    /* background-color: yellow; */
+    background-color: var(--second-level-background-color);
     padding-top: 1em;
 }
 
 .widget > .widget > .widget {
-    /* background-color: red; */
+    background-color: var(--third-level-background-color);
     flex-direction: row;
 }
 
+
 .widget-title {
     font-weight: 700;
+    font-size: 1.5em;
     padding-left: 1.5em;
+    padding-top: 1.5em;
+    color: var(--node-title-color)
+}
+
+.widget-title + .widget > .widget-title {
+    font-size: 1em;
+    padding-top: 1em;
+    color: var(--title-color)
+}
+
+.widget-data {
+    padding-left: 0.5em;
 }
