Начальная реализация динамической подгрузки данных, получаемых от плагинов и агентов

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>{{ serverInfo }}</h1>
-    {{ renderList . }}
-    <script src="templates/scripts.js"></script>    
+    <div id="data-container"></div>
+    <script src="templates/scripts.js"></script>
 </body>
 </html>
