--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HeartBeat Monitor on {{ serverInfo }}</title>
+    <link rel="icon" type="image/x-icon" href="/templates/favicon.ico">
     <link rel="stylesheet" href="/templates/styles.css">
     <script src="/templates/jquery.js"></script>
 </head>
