--- a/internal/plugins/PostgreSqlQueryPluginDirectory/PostgreSqlQueryPlugin.css
+++ b/internal/plugins/PostgreSqlQueryPluginDirectory/PostgreSqlQueryPlugin.css
@@ -1,11 +1,3 @@
-.PostgreSqlQueryPlugin > .widget {
-    padding: 0px;
-    flex-direction: row;
-    font-weight: normal;
-}
-  
-.PostgreSqlQueryPlugin > .widget * {
-    font-weight: normal;
-    font-size: 16px;
-    padding: 3px;
+.outer.widget.widget.PostgreSqlQueryPlugin {
+    min-width: 34em;
 }
