--- a/templates/styles.css
+++ b/templates/styles.css
@@ -1,8 +1,3 @@
-.outer.widget.widget.PostgreSqlQueryPlugin {
-    min-width: 34em;
-    height: fit-content;
-}
-
 :root {
     --nord0: #2e3440;
     --nord1: #3b4252;
@@ -152,6 +147,13 @@ h1 {
 
 .inner.widget  {
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.inner.widget * {
+    padding: 0em 0.5em;
 }
 
 .outer.widget {
