Заготовка для механизма скрытия нормальных параметров и отображения только warning

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <h1>{{ serverInfo }}</h1>
+    <label>
+        <input type="checkbox" id="toggleSwitch" checked>
+        Скрыть виджеты без parent-warning
+      </label>
     <div id="data-container"></div>
     <script src="templates/scripts.js"></script>
 </body>
