--- a/templates/styles.css
+++ b/templates/styles.css
@@ -160,3 +160,52 @@ h1 {
     margin: 0.5em;
     padding: 1em;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 5em;
+    height:2em;
+  }
+  
+  /* Скрываем стандартный чекбокс */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* Стилизуем слайдер */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 1.2em;
+    bottom: 0;
+    background-color: var(--nord1);
+    transition: 0.4s;
+    border-radius: 34px;
+  }
+  
+  /* Круглый переключатель внутри слайдера */
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: var(--nord3);
+    transition: 0.4s;
+    border-radius: 50%;
+  }
+  
+  /* Состояние включено */
+  .switch input:checked + .slider {
+    background-color: var(--nord11);
+  }
+  
+  .switch input:checked + .slider:before {
+    transform: translateX(1.5em);
+  }
