--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <h1>{{ serverInfo }}</h1>
-    <label>
+    <div class="switch-container">
+      <div class="switch-container-items">
+        <div class="switch-container-label">Отображать только предупреждения</div>
         <label class="switch">
             <input type="checkbox" id="toggleSwitch" checked>
             <span class="slider"></span>
           </label>
-        Скрыть виджеты без parent-warning
-      </label>
+        </div>
+    </div>
     <div id="data-container"></div>
     <script src="templates/scripts.js"></script>
 </body>
