--- a/templates/styles.css
+++ b/templates/styles.css
@@ -46,6 +46,11 @@ h1 {
 	padding: 20px;
 }
 
+.widget {
+	display: flex;
+	align-items: baseline;
+}
+
 .grid-stack-item-content {
 	background-color: var(--second-level-background-color);
 	padding: 15px;
@@ -59,11 +64,6 @@ h1 {
 	flex-direction: column;
 }
 
-.agent-data>.widget:hover {
-	transform: scale(1.1);
-	box-shadow: 0px 0px 12px 4px rgba(255, 255, 255, 0.1);
-}
-
 .widget-title {
 	font-weight: bold;
 	margin-bottom: 5px;
@@ -73,6 +73,7 @@ h1 {
 
 .widget-data {
 	font-size: 1.5em;
+	padding-left: 0.2em;
 }
 
 .parent-warning {
@@ -125,43 +126,6 @@ h1 {
 	}
 }
 
-.agent-data {
-	display: flex;
-	flex-wrap: wrap;
-	width: 98vw;
-}
-
-.agent-data>.widget {
-	min-width: max-content;
-	margin: 1em;
-}
-
-
-.agent-data>.widget.small {
-	width: 15em;
-	height: 15em;
-}
-
-.agent-data>.widget.big {
-	min-width: 30em;
-	min-height: 30em;
-}
-
-.inner.widget {
-	padding: 0;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-}
-
-.inner.widget * {
-	padding: 0em 0.5em;
-}
-
-.outer.widget {
-	margin: 0.5em;
-	padding: 1em;
-}
 
 .switch {
 	position: relative;
@@ -228,7 +192,9 @@ h1 {
 	color: var(--nord9);
 }
 
-/* .grid-stack { */
-/* 	background: var(--nord1); */
-/* } */
-
+.built-in-agent-name {
+	font-size: large;
+    color: var(--nord15);
+    padding-bottom: 1em;
+    font-weight: bold;;
+}
