--- a/templates/NotFound.html
+++ b/templates/NotFound.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>404 — Страница не найдена | {{ serverInfo }}</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <div class="notFound">
+  <div class="notFoundContainer">
     <h1>404</h1>
-    <div>Упс! Страница не найдена</div>
-    <div>Возможно, вы перешли по устаревшей ссылке или ввели адрес с ошибкой.</div>
+    <div class="notFoundCaption">Page not found</div>
+    <a class="btn" href=".">Go to dashboard</a>
   </div>
+
 </body>
+</body>
+
 </html>
