--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 		<div class="switch-container-items">
 			<div class="switch-container-label">Отображать только предупреждения</div>
 			<label class="switch">
-				<input type="checkbox" id="toggleSwitch" checked>
+				<input type="checkbox" id="show_only_warnings_checkbox">
 				<span class="slider"></span>
 			</label>
 		</div>
