Для каждого виджета добавлен data-group

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
 			</label>
 		</div>
 	</div>
-	<div id="data-container"></div>
-
-	<div class="grid-stack"></div>
+	<div id="data-container">
+		<div class="grid-stack"></div>
+	</div>
 </body>
 
 </html>
