--- a/templates/styles.css
+++ b/templates/styles.css
@@ -40,10 +40,7 @@ h1 {
 }
 
 #data-container {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-	gap: 10px;
-	padding: 20px;
+	padding: 2em;
 }
 
 .widget {
@@ -57,8 +54,16 @@ h1 {
 	border-radius: 5px;
 	display: flex;
 	justify-content: center;
-	font-size: 14px;
 	transition: transform 0.3s, box-shadow 0.3s;
+	min-height: auto;
+}
+
+
+.widget-content {
+	padding: 15px;
+	display: flex;
+	justify-content: center;
+	font-size: 14px;
 	min-height: auto;
 	align-items: center;
 	flex-direction: column;
