Добавлена генерация кнопок для переключателя агентов

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
 			</label>
 		</div>
 	</div>
+	<div id="agent-switcher"></div>
 	<div id="data-container">
 		<div class="grid-stack"></div>
 	</div>
