Реализована логика фильтрации виджетов по агентам

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 			</label>
 		</div>
 	</div>
-	<div id="agent-switcher"></div>
+	<div id="agent-switcher" class="hidden"></div>
 	<div id="data-container">
 		<div class="grid-stack"></div>
 	</div>
