--- a/templates/styles.css
+++ b/templates/styles.css
@@ -222,13 +222,22 @@ h1 {
 	padding: .75rem 1.5rem;
 	text-decoration: none;
 	border-radius: .5rem;
-	background: var(--nord10);
+	background: var(--nord2);
 	color: var(--nord4);
 	margin: 0.5em;
     cursor: default;
 }
 
+.btn.active {
+	background: var(--nord13);
+	color: var(--nord1);
+}
+
 #agent-switcher {
 	margin-left: 3em;
 	margin-right: 3em;
+}
+
+.hidden {
+	display: none;
 }
