--- a/templates/styles.css
+++ b/templates/styles.css
@@ -139,14 +139,14 @@ h1 {
 	height: 2em;
 }
 
-/* Скрываем стандартный чекбокс */
+
 .switch input {
 	opacity: 0;
 	width: 0;
 	height: 0;
 }
 
-/* Стилизуем слайдер */
+
 .slider {
 	position: absolute;
 	cursor: pointer;
@@ -159,7 +159,7 @@ h1 {
 	border-radius: 34px;
 }
 
-/* Круглый переключатель внутри слайдера */
+
 .slider:before {
 	position: absolute;
 	content: "";
@@ -172,7 +172,7 @@ h1 {
 	border-radius: 50%;
 }
 
-/* Состояние включено */
+
 .switch input:checked+.slider {
 	background-color: var(--nord11);
 }
@@ -240,4 +240,13 @@ h1 {
 
 .hidden {
 	display: none;
+}
+
+.noselect {
+	-webkit-touch-callout: none; 
+	  -webkit-user-select: none; 
+	   -khtml-user-select: none; 
+		 -moz-user-select: none; 
+		  -ms-user-select: none; 
+			  user-select: none;
 }
