--- a/templates/styles.css
+++ b/templates/styles.css
@@ -50,7 +50,7 @@ h1 {
 
 .grid-stack-item-content {
 	background-color: var(--second-level-background-color);
-	padding: 15px;
+	/* padding: 15px;	 */
 	border-radius: 5px;
 	display: flex;
 	justify-content: center;
@@ -225,7 +225,7 @@ h1 {
 	background: var(--nord3);
 	color: var(--nord4);
 	margin: 0.5em;
-    cursor: default;
+	cursor: default;
 	font-size: 1.3em;
 }
 
@@ -236,10 +236,10 @@ h1 {
 
 #agent-switcher {
 	margin-left: 3em;
-    margin-right: 3em;
-    background-color: var(--nord1);
-    border-radius: 1em;
-    margin-top: 1em;
+	margin-right: 3em;
+	background-color: var(--nord1);
+	border-radius: 1em;
+	margin-top: 1em;
 }
 
 .hidden {
@@ -247,10 +247,44 @@ h1 {
 }
 
 .noselect {
-	-webkit-touch-callout: none; 
-	  -webkit-user-select: none; 
-	   -khtml-user-select: none; 
-		 -moz-user-select: none; 
-		  -ms-user-select: none; 
-			  user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.grid-stack-item-content.placeholder.placeholder.placeholder {
+	overflow: hidden;
+	border-radius: 5px;
+	min-height: auto;
+	transition: opacity 2s ease;
+}
+
+.placeholder::after {
+	content: '';
+	position: absolute;
+	top: -7.5em;
+	height: 15em;
+	width: 100%;
+	background-image: linear-gradient(0deg,
+			rgba(240, 240, 240, 0) 0%,
+			rgba(139, 139, 139, 0.4) 50%,
+			rgba(240, 240, 240, 0) 100%);
+	animation: loadingShimmer 5s infinite;
+}
+
+@keyframes loadingShimmer {
+	0% {
+		top: -15em;
+	}
+
+	100% {
+		top: 100%;
+	}
+}
+
+.fade-out {
+	opacity: 0;
 }
