--- a/templates/styles.css
+++ b/templates/styles.css
@@ -288,3 +288,28 @@ h1 {
 .fade-out {
 	opacity: 0;
 }
+
+body::-webkit-scrollbar {
+	width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: var(--nord1);
+}
+
+.grid-stack-item-content::-webkit-scrollbar {
+	width: 1em;
+}
+
+.grid-stack-item-content::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.grid-stack-item-content::-webkit-scrollbar-thumb {
+	background-color: var(--nord3);
+	outline: 1px solid var(--nord1)
+}
